k8s-security/ch09/phase-a-netpol/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-sec
  labels:
    # label so other resources can target this ns by name=
    name: demo-sec
